--- a/margin-trade.html
+++ b/margin-trade.html
@@ -1739,7 +1739,7 @@
 
     <!-- Plugin Js -->
     <script src="assets/bundles/dataTables.bundle.js"></script>
-    <script  src="../../../../../s3.tradingview.com/tv.js"></script>
+    <script  src="https://s3.tradingview.com/tv.js"></script>
 
     <!-- Jquery Page Js -->
     <script src="../js/template.js"></script>
