--- a/battel.html
+++ b/battel.html
@@ -1262,7 +1262,7 @@
     <script src="assets/bundles/libscripts.bundle.js"></script>
 
     <!-- Plugin Js -->
-    <script  src="../../../../../s3.tradingview.com/tv.js"></script>
+    <script  src="https://s3.tradingview.com/tv.js"></script>
     <script src="assets/bundles/dataTables.bundle.js"></script>
 
     <!-- Jquery Page Js -->
