--- a/future-trade.html
+++ b/future-trade.html
@@ -1464,7 +1464,7 @@
 
     <!-- Plugin Js -->
     <script src="assets/bundles/dataTables.bundle.js"></script>
-    <script  src="../../../../../s3.tradingview.com/tv.js"></script>
+    <script  src="https://s3.tradingview.com/tv.js"></script>
 
     <!-- Jquery Page Js -->
     <script src="../js/template.js"></script>
